# project-madness

./: CREDITS  CREDITS.md  Cargo.toml  README.md  TODO.md  index.css  index.html  robots.txt  search_index.en.js  site.webmanifest  sitemap.xml
.beads/: issues.jsonl
.github/workflows/: scenario.yml
00/: index.html
10/: index.html
20/: index.html
concept/: CONCEPT.md  refs-visuelles.pur
concept/language/: r’lyehian.md
concept/main-character/: recherches.md
concept/main-characters/: detective.md  pecheur.md
dev/: Cargo.toml
dev/.cargo/: config.toml
dev/assets/audios/levels/Level_0/: ambient.ogg.ron
dev/assets/dialogs/: dummy_npc.ink.json
dev/assets/shaders/: level_transition.wgsl
dev/assets/shaders/post_processing/: level_transition.wgsl
dev/assets/textures/map/: cave_tileset.aseprite  tilemap.ldtk
dev/assets/textures/npcs/: dummy_npc.aseprite
dev/assets/textures/objects/: torch.aseprite
dev/assets/textures/player/: player.aseprite
dev/src/: game.rs  lib.rs  main.rs
dev/src/game/: tick.rs
dev/src/game/audio/: ambient_audio.rs  mod.rs  object_audio.rs  player_audio.rs
dev/src/game/audio/music/: introduction.rs  mod.rs
dev/src/game/audio/object_audio/: dummy_npc.rs  mod.rs
dev/src/game/camera/: mod.rs  post_process_shaders.rs
dev/src/game/camera/post_processing_shaders/: level_transition_shader.rs  mod.rs
dev/src/game/controls/: mod.rs
dev/src/game/custom_asset_types/: ink_json.rs  mod.rs
dev/src/game/dialog_system/: mod.rs  utils.rs
dev/src/game/global/: loader.rs  mod.rs
dev/src/game/lighting/: mod.rs  occluders.rs  player.rs  torch.rs  torchlight.rs
dev/src/game/map/: colliders.rs  mod.rs  utils.rs
dev/src/game/map/actionables/: dummy.rs  mod.rs
dev/src/game/map/inerts/: mod.rs  torch.rs
dev/src/game/map/int_grid_objects/: mod.rs
dev/src/game/map/npc/: dummy_npc.rs  mod.rs
dev/src/game/map/toggles/: portals.rs
dev/src/game/map/zones/: mod.rs  music_zones.rs  portals.rs  wander_zones.rs
dev/src/game/physics/: mod.rs
dev/src/game/physics/colliders/: mod.rs  wall.rs
dev/src/game/player/: mod.rs
dev/src/game/ui/: dialogs.rs  mod.rs
dev/src/game/ui/menu/: mod.rs
scripts/: check-dialogs.sh  check.sh  init-project.sh  install-dependencies.sh  transcode_many_to.sh  update-dialogs.sh
(+33 files in other folders)
