cargo-features = ["codegen-backend"]

[package]
name = "project-madness"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["file_watcher"]}
bevy_aseprite_ultra = "0.6.1"
bevy_ecs_ldtk = "0.12.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"